fixed buttons alignment

--- a/style.css
+++ b/style.css
@@ -16,8 +16,10 @@
   align-self: flex-start; /*this ensures that the alignment of the 2 boards are equal*/
 }
 
-.board-wrapper:last-child {
-  margin: auto;
+.buttons-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
 }
 
 .user-side {
@@ -70,7 +72,7 @@ p{
   margin-top: 10px;
 }
 
-.reset {
+.reset, #instructions {
   background-color: #f8f9fa;
   border: 1px solid #f8f9fa;
   border-radius: 4px;
@@ -88,6 +90,8 @@ p{
   touch-action: manipulation;
   white-space: pre;
 }
+
+
 
 /* .reset:hover {
   border-color: #dadce0;
@@ -99,32 +103,6 @@ p{
   border-color: #4285f4;
   outline: none;
 } */
-
-#instructions {
-  background-color: #f8f9fa;
-  border: 1px solid #f8f9fa;
-  border-radius: 4px;
-  color: #3c4043;
-  cursor: pointer;
-  font-family: arial, sans-serif;
-  font-size: 14px;
-  height: 36px;
-  line-height: 27px;
-  min-width: 54px;
-  padding: 0 16px;
-  text-align: center;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  white-space: pre;
-}
-
-/* #instructions {
-  border-color: #dadce0;
-  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 1px;
-  color: #202124;
-} */
-
 
 #popup {
   display: flex;
